Fixed fonts not showing up

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -59,7 +59,7 @@ $link-color: rgb(255, 218, 159);
 
 $breakpoint: 1000px; // If the screen is under this width, switch to mobile view
 
-$font-family: "Lato";
+$font-family: "OpenSans";
 $font-size: medium;
 
 @mixin common-style {
@@ -68,7 +68,6 @@ $font-size: medium;
     font-weight: bold;
     font-size: $font-size;
     font-family: $font-family;
-    color: red;
   }
   h1 {
     font-size: 2.2em;
