--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,19 +1,19 @@
 @font-face {
     font-family: "OpenSans";
-    src: url("/fonts/OpenSans-Regular.ttf");
+    src: url("/fonts/OpenSans/OpenSans-Regular.ttf");
 }
 @font-face {
     font-family: "OpenSans";
-    src: url("/fonts/OpenSans-Bold.ttf");
+    src: url("/fonts/OpenSans/OpenSans-Bold.ttf");
     font-weight: bold;
 }
 @font-face {
     font-family: "OpenSans";
-    src: url("/fonts/OpenSans-Italic.ttf");
+    src: url("/fonts/OpenSans/OpenSans-Italic.ttf");
     font-weight: italic;
 }
 @font-face {
     font-family: "OpenSans";
-    src: url("/fonts/OpenSans-BoldItalic.ttf");
+    src: url("/fonts/OpenSans/OpenSans-BoldItalic.ttf");
     font-style: italic, bold;
 }
